# DAVID

./: .env.example  .gitignore  CLAUDE.md  README.md  evaluate_reconstruction.py  evaluate_vqa.py  extract_features.py  job.sh  perception_test_mini100.json  pyproject.toml  requirements.txt  run_retention_experiment.py  train.py
configs/: train_config.yaml  train_config_2b_online.yaml
david/: __init__.py  backbone.py  dataset.py  loss.py  utils.py  vae.py
scripts/: job.sh
